@@ -551,21 +551,29 @@ FORMULA_PVPDAMAGEWEAPONCRIT=(@x1 * (((@x2-10)/2.5)>0 * ((@x3-10)/2.5)>0 * ((@x3-
 
 # The CLASSSYSTEM describes how the character classing system works.
 # The default is 'SUB', but valid values include:
-# SUB       Player can create a character in any one Base class,
-#           and take levels in any of that Base classes subclasses 
-#           by switching.
-# NO        Disables all multi-classing, allowing users to pick from
-#           any of the player-selectable classes, but not to change.
-# MULTI     Allows the player to select from any of the user-selectable
-#           classes, and then to take levels in any other class at will.
-# APP-SUB   All players start as Apprentice, thereafter same as 
-#           the SUB option above.
-# APP-NO    All players start as Apprentice, and are allowed to change
-#           to any other class exactly once, and are stuck thereafter.
-# APP-MULTI All players start as Apprentice, thereafter same as 
-#           the MULTI option above.
-# DISABLED  Disables the class system altogether.  This is the same as
-#           including CLASSES in the DISABLE flag.
+# SUB        Player can create a character in any one Base class,
+#            and take levels in any of that Base classes subclasses 
+#            by switching.
+# NO         Disables all multi-classing, allowing users to pick from
+#            any of the player-selectable classes, but not to change.
+# NO-BASE    Disables all multi-classing, allowing users to pick from
+#            any of the base classes, but not to change.
+# NO-SUBONLY Disables all multi-classing, allowing users to pick from
+#            any of the sub classes, but none of the base classes.
+# NO-[X]     Specify a one and only class that players must take and 
+#            keep.  Where [X] is a CLASS ID or name. Kinda like APP-*
+# NO-GRP-[X] Specify a one and only class group that players may pick 
+#            from and stick with.  Where [X] is a BASE CLASS ID or name.
+# MULTI      Allows the player to select from any of the user-selectable
+#            classes, and then to take levels in any other class at will.
+# APP-SUB    All players start as Apprentice, thereafter same as 
+#            the SUB option above.
+# APP-NO     All players start as Apprentice, and are allowed to change
+#            to any other class exactly once, and are stuck thereafter.
+# APP-MULTI  All players start as Apprentice, thereafter same as 
+#            the MULTI option above.
+# DISABLED   Disables the class system altogether.  This is the same as
+#            including CLASSES in the DISABLE flag.
 CLASSSYSTEM=SUB
 
 # The FACTIONS string is a semicolon delimited list of paths
