@@ -252,7 +252,7 @@ public class Train extends StdCommand
 			&&(teacher.charStats().getClassLevel(theClass)<1))
 			{
 				if((!CMProps.getVar(CMProps.Str.MULTICLASS).startsWith("MULTI"))
-				&&(!CMProps.getVar(CMProps.Str.MULTICLASS).startsWith("APP-MULTI")))
+				&&(!CMProps.getVar(CMProps.Str.MULTICLASS).endsWith("MULTI")))
 				{
 					CharClass C=CMClass.getCharClass(mob.charStats().getCurrentClass().baseClass());
 					String baseClassName=(C!=null)?C.name():mob.charStats().getCurrentClass().baseClass();
